[package]
name = "bevy_kot_derive"
description = "Derives for bevy_kot"
authors = ["koe <ukoe@protonmail.com>"]
version = "0.0.9"
edition = "2021"
keywords = ["gamedev", "ui"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UkoeHB/bevy_kot"

[lib]
proc-macro = true

[dependencies]
bevy_macro_utils = { version = "0.11", default-features = false }
quote            = { version = "1.0" }
syn              = { version = "2.0" }
