[package]
name = "bevy_kot_derive"
description = "Derives for bevy_kot"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
bevy_macro_utils = { version = "0.12", default-features = false }
quote            = { version = "1.0" }
syn              = { version = "2.0" }
