[package]
name = "bevy_kot_ecs"
description = "ECS utilities for bevy_kot"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
test = false

[dependencies]
bevy           = { workspace = true }
bevy_fn_plugin = { workspace = true }
crossbeam      = { workspace = true }
fxhash         = { workspace = true }
tracing        = { workspace = true }

bevy_kot_utils = { workspace = true }
