[package]
name = "bevy_kot_utils"
description = "ECS utilities for bevy_kot"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
test    = false
doctest = false

[dependencies]
bevy             = { workspace = true }
bevy_fn_plugin   = { workspace = true }
