[package]
name = "tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
bevy = { workspace = true }

tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

bevy_kot     = { path = ".." }
bevy_kot_ecs = { path = "../bevy_kot_ecs" }

[[test]]
name = "tests"
path = "tests.rs"
